# wne-uw-ml1-ds-labs-materials

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: core_ml_techniques.ipynb  knn.ipynb  linear_and_logistic_regression.ipynb  svm.ipynb
