[project]
name = "wne-uw-ml1-ds-labs-materials"
version = "0.1.0"
description = "Lab notebooks for the Machine Learning 1 course at WNE UW"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]
